# matrix_operations_cuda

./: Cargo.toml  Readme.md
resources/: kernel.cu  kernel.ptx  kernel_float.cu  kernel_float.ptx  kernel_int.cu  kernel_int.ptx  kernel_test.cu  kernel_test.ptx
src/: cuda_env.rs  cuda_module.rs  lib.rs  matrix_apply.rs
